# RustyFace

./: .all-contributorsrc  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: pre_release_github.yml  tests.yml
src/: download.rs  main.rs  utilities.rs
tests/: cli.rs
