[package]
name = "rustyface"
version = "0.1.0"
authors = ["Xinyu Bao <baoxinyuworks@163.com>"]
edition = "2021"
description = "A Huggingface downloading CLI tool written in Rust."
license = "MIT"
repository = "https://github.com/AspadaX/RustyFace"
keywords = ["cli", "huggingface", "downloader"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
futures-util = "0.3.30"
git2 = "0.19.0"
glob = "0.3.1"
humantime = "2.1.0"
indicatif = "0.17.8"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["blocking", "stream"] }
sha2 = "0.10.8"
tokio = { version = "1.39.2", features = ["full"] }

[[bin]]
name = "rustyface"
path = "src/main.rs"